sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:10: error: '(' expected but identifier found.
    if estPlusPetit(i,i+1)
       ^AlgCocktailSort1:14: error: '=' expected but '}' found.
    }
    ^AlgCocktailSort1:20: error: '(' expected but identifier found.
  if !(tri)
     ^AlgCocktailSort1:25: error: '(' expected but identifier found.
     if estplusPetit(i,i+1)
        ^